isbsvc updated for configmap
Signed-off-by: Julie Vogelman <julievogelman0@gmail.com>

--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -229,7 +229,7 @@ data:
       hs.status = "Degraded"
       hs.message = reason
       return hs
-    
+    end
 
     healthy, reason = isHealthy(obj)
     if healthy then
