--- a/resources/demo-app/monovertex.yaml
+++ b/resources/demo-app/monovertex.yaml
@@ -9,7 +9,7 @@ spec:
       source:
         udsource:
           container:
-            image: quay.io/numaio/numaflow-go/source-simple-source:v0.8.1
+            image: quay.io/numaio/numaflow-go/source-simple-source:stable
             #image: quay.io/numaio/numaflow-go/bad-image:stable
       sink:
         udsink:
