--- a/resources/demo-app/pipeline.yaml
+++ b/resources/demo-app/pipeline.yaml
@@ -32,6 +32,7 @@ spec:
             max: 1
           udf:
             container: 
+              #image: "quay.io/numaio/numaflow-go/bad-image:stable"
               image: "quay.io/numaio/numaflow-go/map-slow-cat:stable"
               env:
                 - name: SLEEP_SECONDS
