--- a/resources/demo-app/isbservicerollout.yaml
+++ b/resources/demo-app/isbservicerollout.yaml
@@ -7,6 +7,6 @@ spec:
   interStepBufferService:
     spec:
       jetstream:
-        version: 2.10.3
+        version: 2.10.99 #2.10.3
         persistence:
           volumeSize: 1Gi
