--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -18,7 +18,7 @@ data:
       if obj.status.conditions ~= nil then
         for i, condition in ipairs(obj.status.conditions) do
           if condition.type == "PipelinePausingOrPaused" and condition.status == "True" then
-            return true, pausedCondition.message
+            return true, condition.message
           end
         end
       end
@@ -347,7 +347,7 @@ data:
       if obj.status.conditions ~= nil then
         for i, condition in ipairs(obj.status.conditions) do
           if condition.type == "MonoVertexPausingOrPaused" and condition.status == "True" then
-            return true, pausedCondition.message
+            return true, condition.message
           end
         end
       end
