--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -7,6 +7,9 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
 data:
+
+  resource.customLabels: "numaplane.numaproj.io/upgrade-state"
+
   #application.instanceLabelKey: applications.argoproj.io/app-name
   resource.customizations.health.numaplane.numaproj.io_PipelineRollout: |
     -- return true if paused, along with the reason
