--- a/resources/demo-app/monovertex.yaml
+++ b/resources/demo-app/monovertex.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: example-namespace
 spec:
   monoVertex:
+    metadata:
+      labels:
+        myTestLabel: "bcd"
     spec:
       source:
         udsource:
