--- a/resources/demo-app/monovertex.yaml
+++ b/resources/demo-app/monovertex.yaml
@@ -8,6 +8,7 @@ spec:
     metadata:
       labels:
         myTestLabel: "bcd"
+        labelWith.Period: "labelWithPeriod"
     spec:
       source:
         udsource:
